gatekeeper/constraints/k8sdisallowlatesttag-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowlatesttag
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatestTag
      validation:
        openAPIV3Schema:
          type: object
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowlatesttag

      violation[{"msg": msg}] {
        container := input.review.object.spec.containers[_]
        endswith(container.image, ":latest")
        msg := sprintf("container %v uses a latest image tag", [container.name])
      }

      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        endswith(container.image, ":latest")
        msg := sprintf("container %v uses a latest image tag", [container.name])
      }
