gatekeeper/constraints/k8sdisallowrootuser-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowrootuser
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowRootUser
      validation:
        openAPIV3Schema:
          type: object
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowrootuser

      violation[{"msg": msg}] {
        input.review.object.spec.securityContext.runAsUser == 0
        msg := "pod must not run as root user"
      }

      violation[{"msg": msg}] {
        input.review.object.spec.template.spec.securityContext.runAsUser == 0
        msg := "workload must not run as root user"
      }

      violation[{"msg": msg}] {
        container := input.review.object.spec.containers[_]
        container.securityContext.runAsUser == 0
        msg := sprintf("container %v must not run as root user", [container.name])
      }

      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        container.securityContext.runAsUser == 0
        msg := sprintf("container %v must not run as root user", [container.name])
      }
