gatekeeper/constraints/k8srequirelimits-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirelimits
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sRequireLimits
      validation:
        openAPIV3Schema:
          type: object
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequirelimits

      violation[{"msg": msg}] {
        container := input.review.object.spec.containers[_]
        not container.resources.limits
        msg := sprintf("container %v must set resources.limits", [container.name])
      }

      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        not container.resources.limits
        msg := sprintf("container %v must set resources.limits", [container.name])
      }
